@@ -1,0 +1,275 @@
+/**
+ *
+ */
+package javax.jmdns.impl;
+
+import java.util.EventListener;
+import java.util.logging.Level;
+import java.util.logging.Logger;
+
+import javax.jmdns.JmDNS;
+import javax.jmdns.ServiceEvent;
+import javax.jmdns.ServiceInfo;
+import javax.jmdns.ServiceListener;
+import javax.jmdns.ServiceTypeListener;
+
+/**
+ * This class track the status of listener.<br/>
+ * The main purpose of this class is to collapse consecutive events so that we can guarantee the correct call back sequence.
+ *
+ * @param <T>
+ *            listener type
+ *
+ */
+public class ListenerStatus<T extends EventListener>
+{
+
+    public static class ServiceListenerStatus extends ListenerStatus<ServiceListener>
+    {
+        private static Logger logger = Logger.getLogger(ServiceListenerStatus.class.getName());
+
+        private volatile boolean _added;
+
+        private volatile boolean _resolved;
+
+        private volatile ServiceInfo _lastServiceInfo;
+
+        /**
+         * @param listener
+         */
+        public ServiceListenerStatus(ServiceListener listener)
+        {
+            super(listener);
+            _added = false;
+            _resolved = false;
+            _lastServiceInfo = null;
+        }
+
+        /**
+         * A service has been added.<br/>
+         * <b>Note:</b>This event is only the service added event. The service info associated with this event does not include resolution information.<br/>
+         * To get the full resolved information you need to listen to {@link #serviceResolved(ServiceEvent)} or call {@link JmDNS#getServiceInfo(String, String, long)}
+         *
+         * <pre>
+         *  ServiceInfo info = event.getDNS().getServiceInfo(event.getType(), event.getName())
+         * </pre>
+         * <p>
+         * Please note that service resolution may take a few second to resolve.
+         * </p>
+         *
+         * @param event
+         *            The ServiceEvent providing the name and fully qualified type of the service.
+         */
+        synchronized void serviceAdded(ServiceEvent event)
+        {
+            if (!_added)
+            {
+                this.getListener().serviceAdded(event);
+                _added = true;
+                ServiceInfo info = event.getInfo();
+                if ((info != null) && (info.hasData()))
+                {
+                    this.serviceResolved(event);
+                }
+            }
+            else
+            {
+                logger.finer("Service Added called for a service already added: " + event);
+            }
+        }
+
+        /**
+         * A service has been removed.
+         *
+         * @param event
+         *            The ServiceEvent providing the name and fully qualified type of the service.
+         */
+        synchronized void serviceRemoved(ServiceEvent event)
+        {
+            if (_added)
+            {
+                this.getListener().serviceRemoved(event);
+                _added = false;
+                _resolved = false;
+                _lastServiceInfo = null;
+            }
+            else
+            {
+                logger.finer("Service Removed called for a service already removed: " + event);
+            }
+        }
+
+        /**
+         * A service has been resolved. Its details are now available in the ServiceInfo record.<br/>
+         * <b>Note:</b>This call back will never be called if the service does not resolve.<br/>
+         *
+         * @param event
+         *            The ServiceEvent providing the name, the fully qualified type of the service, and the service info record.
+         */
+        synchronized void serviceResolved(ServiceEvent event)
+        {
+            ServiceInfo info = event.getInfo();
+            if ((info != null) && (info.hasData()))
+            {
+                if ((!_resolved) || (!_sameInfo(info, _lastServiceInfo)))
+                {
+                    this.getListener().serviceResolved(event);
+                    _resolved = true;
+                    try
+                    {
+                        _lastServiceInfo = (ServiceInfo) info.clone();
+                    }
+                    catch (CloneNotSupportedException exception)
+                    {
+                        // clone is supported
+                        logger.log(Level.SEVERE, "Exception ", exception);
+                    }
+                }
+                else
+                {
+                    logger.finer("Service Resolved called for a service already resolved: " + event);
+                }
+            }
+            else
+            {
+                logger.warning("Service Resolved called for an unresolved event: " + event);
+
+            }
+        }
+
+        private static final boolean _sameInfo(ServiceInfo info, ServiceInfo lastInfo)
+        {
+            if (info == null)
+                return false;
+            if (lastInfo == null)
+                return false;
+            if (!info.equals(lastInfo))
+                return false;
+            byte[] text = info.getTextBytes();
+            byte[] lastText = lastInfo.getTextBytes();
+            if (text.length != lastText.length)
+                return false;
+            for (int i = 0; i < text.length; i++)
+            {
+                if (text[i] != lastText[i])
+                    return false;
+            }
+            return true;
+        }
+    }
+
+    public static class ServiceTypeListenerStatus extends ListenerStatus<ServiceTypeListener>
+    {
+        private static Logger logger = Logger.getLogger(ServiceTypeListenerStatus.class.getName());
+
+        private volatile boolean _typeAdded;
+
+        private volatile boolean _subTypeAdded;
+
+        /**
+         * @param listener
+         */
+        public ServiceTypeListenerStatus(ServiceTypeListener listener)
+        {
+            super(listener);
+            _typeAdded = false;
+            _subTypeAdded = false;
+        }
+
+        /**
+         * A new service type was discovered.
+         *
+         * @param event
+         *            The service event providing the fully qualified type of the service.
+         */
+        synchronized void serviceTypeAdded(ServiceEvent event)
+        {
+            if (!_typeAdded)
+            {
+                this.getListener().serviceTypeAdded(event);
+                _typeAdded = true;
+            }
+            else
+            {
+                logger.finest("Service Type Added called for a service type already added: " + event);
+            }
+        }
+
+        /**
+         * A new subtype for the service type was discovered.
+         *
+         * <pre>
+         * &lt;sub&gt;._sub.&lt;app&gt;.&lt;protocol&gt;.&lt;servicedomain&gt;.&lt;parentdomain&gt;.
+         * </pre>
+         *
+         * @param event
+         *            The service event providing the fully qualified type of the service with subtype.
+         */
+        synchronized void subTypeForServiceTypeAdded(ServiceEvent event)
+        {
+            if (!_subTypeAdded)
+            {
+                this.getListener().subTypeForServiceTypeAdded(event);
+                _subTypeAdded = true;
+            }
+            else
+            {
+                logger.finest("Service Sub Type Added called for a service sub type already added: " + event);
+            }
+        }
+    }
+
+    private final T _listener;
+
+    /**
+     * @param listener
+     *            listener being tracked.
+     *
+     */
+    public ListenerStatus(T listener)
+    {
+        super();
+        _listener = listener;
+    }
+
+    /**
+     * @return the listener
+     */
+    public T getListener()
+    {
+        return _listener;
+    }
+
+    /*
+     * (non-Javadoc)
+     *
+     * @see java.lang.Object#hashCode()
+     */
+    @Override
+    public int hashCode()
+    {
+        return this.getListener().hashCode();
+    }
+
+    /*
+     * (non-Javadoc)
+     *
+     * @see java.lang.Object#equals(java.lang.Object)
+     */
+    @Override
+    public boolean equals(Object obj)
+    {
+        return (obj instanceof ListenerStatus) && this.getListener().equals(((ListenerStatus<?>) obj).getListener());
+    }
+
+    /*
+     * (non-Javadoc)
+     *
+     * @see java.lang.Object#toString()
+     */
+    @Override
+    public String toString()
+    {
+        return "[Status for " + this.getListener().toString() + "]";
+    }
+}
