@@ -1,5 +1,6 @@
 CHANGELOG XX XXXX 2010 Pierre Frisch
 Rev the source code to 3.2.2
+serviceResolved not working properly - ID: 3032054
 
 CHANGELOG 31 August 2010 Pierre Frisch
 Rev the source code to 3.2.1
